# hotsos

./: .coveragerc  .editorconfig  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  build.sh  cli.py  client.py  gh-test-requirements.txt  helpers  helpers.py  hotsos.sh  plugins.yaml  pylintrc  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini  yamllintrc
common/: checks.py  (+14 more)
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/: Makefile  README.md  actions.yaml  charm-helpers-hooks.yaml  config.yaml  copyright  lxd-profile.yaml  metadata.yaml  osci.yaml  repo-info  setup.cfg  version
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/actions/: cleanup  cleanup.py  os_actions.py  run-deferred-hooks
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/files/: nova-ovs-vhost-user.conf
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/hooks/: install  neutron_ovs_context.py  neutron_ovs_hooks.py  neutron_ovs_utils.py  pci.py  stop
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/templates/: dnsmasq.conf  etc_dpdk_interfaces  ext-port.conf  neutron-dhcp-agent  openvswitch-switch  os-charm-phy-nic-mtu.conf
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/templates/icehouse/: dhcp_agent.ini  ml2_conf.ini  neutron.conf
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/templates/juno/: fwaas_driver.ini  l3_agent.ini  metadata_agent.ini  ml2_conf.ini
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/templates/kilo/: fwaas_driver.ini  neutron-openvswitch-networking-sriov  neutron-openvswitch-networking-sriov.conf  neutron.conf  sriov_agent.ini
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/templates/liberty/: ml2_conf.ini
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/templates/mitaka/: dhcp_agent.ini  interfaces.yaml  l3_agent.ini  neutron.conf  openvswitch_agent.ini
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/templates/newton/: fwaas_driver.ini
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/templates/ocata/: dhcp_agent.ini  neutron.conf
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/tests/: README.md  tests.yaml
tests/unit/fake_data_root/openstack/var/lib/juju/agents/unit-neutron-openvswitch-1/charm/unit_tests/: 16.07-dpdk-openvswitch-switch  __init__.py  package-provided-openvswitch-switch  pci_responses.py  test_actions_cleanup.py  test_neutron_ovs_context.py  test_neutron_ovs_hooks.py  test_neutron_ovs_utils.py  test_os_actions.py  test_pci.py  test_pci_helper.py  test_utils.py
tests/unit/fake_data_root/rabbitmq/var/lib/juju/agents/unit-rabbitmq-server-0/charm/: Makefile  README.md  actions.yaml  charm-helpers-hooks.yaml  config.yaml  copyright  hardening.yaml  metadata.yaml  osci.yaml  repo-info  setup.cfg  tox.ini  version
tests/unit/fake_data_root/rabbitmq/var/lib/juju/agents/unit-rabbitmq-server-0/charm/actions/: actions.py
tests/unit/fake_data_root/rabbitmq/var/lib/juju/agents/unit-rabbitmq-server-0/charm/files/: check_rabbitmq.py  check_rabbitmq_cluster.py  check_rabbitmq_queues.py  collect_rabbitmq_stats.sh  prom_rule_rmq_splitbrain.yaml
tests/unit/fake_data_root/rabbitmq/var/lib/juju/agents/unit-rabbitmq-server-0/charm/hooks/: install  leader-deposed  rabbit_net_utils.py  rabbit_utils.py  rabbitmq_context.py  rabbitmq_server_relations.py  ssl_utils.py  upgrade-charm
tests/unit/fake_data_root/rabbitmq/var/lib/juju/agents/unit-rabbitmq-server-0/charm/templates/: rabbitmq-env.conf  rabbitmq-server  rabbitmq.conf  rabbitmq.config
tests/unit/fake_data_root/rabbitmq/var/lib/juju/agents/unit-rabbitmq-server-0/charm/tests/: tests.yaml
tests/unit/fake_data_root/rabbitmq/var/lib/juju/agents/unit-rabbitmq-server-0/charm/unit_tests/: __init__.py  test_actions.py  test_nrpe_checks.py  test_rabbit_utils.py  test_rabbitmq_context.py  test_rabbitmq_server_relations.py  test_ssl_utils.py  test_utils.py
(+13932 files in other folders)
