[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hotsos"
description = "Software analysis toolkit. Define checks in high-level language and leverage library to perform analysis of common Cloud applications."
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    'importlib-metadata; python_version >= "3.8"',
    'click',
    'progress',
    'pyyaml',
    'simplejson',
    'jinja2',
    'cryptography',
    'searchkit',
    'propertree'
]

[project.scripts]
hotsos = "hotsos.cli:main"

[tool.setuptools.dynamic]
version = {attr = "hotsos.__version__"}
